# scallion

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: app.rs
src/: consumer.rs  consumer_task.rs  container.rs  error.rs  lib.rs  manager.rs  message.rs  registry.rs  result_store.rs  shared_state.rs  stream.rs  task.rs  task_result.rs
src/tasks/: utility.rs
