[package]
name = "scallion"
version = "0.1.0"
edition = "2021"
authors = ["mkucijan <mkucijan@gmail.com>"]
keywords = ["redis", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mkucijan/scallion"
homepage = "https://github.com/mkucijan/scallion"
description = "Distributed task queue"


[[example]]
name = "app"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.8", features=["full"] }
redis = { version = "0.21", features = ["aio", "connection-manager", "tokio-comp"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
typetag = "0.2"
flate2 = { version = "1.0" }

# Other
hostname = "^0.3"
systemstat = "0.1"

# Extra
rkyv = { version = "0.7", features = ["alloc", "validation", "strict"], optional=true }
bytecheck = { version = "0.6", optional = true }
prost = { version = "0.10", optional = true }

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }
tracing-subscriber = { version="0.3", features = ["env-filter"] }
rand = "0.8"

[features]
rkyv = ["dep:rkyv", "bytecheck"]
protobuf = ["prost"]
